# BUG-TRACKING-SYSTEM

./: .gitignore  database.cpp  database.hpp  main.cpp  server
frontend/: .gitignore  CMakeLists.txt
frontend/Home/: createbug.ui  home.cpp  home_window.h
frontend/Senior_Tester/: assign_dialogue.ui  feature_dialogue.ui  s_tester.cpp  s_tester.h  s_tester.ui  update_dialogue.ui
frontend/Senior_developer/: assign_developer.ui  dialogue.ui  s_developer.cpp  s_developer.h  s_developer.ui
frontend/login/: login.cpp  login.ui  login_window.h
frontend/register/: main.cpp  registration.cpp  registration.ui  registration_window.h
icons/: Bug.icns
